[tool.poetry]
name = "python-dynamodb"
version = "0.1.0"
description = ""
authors = ["jpuente10 <puenteelizondo02@gmail.com>"]
readme = "README.md"
packages = [{include = "python_dynamodb"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
